# redlotus-rs

./: Cargo.toml  README.md
.cargo/: config.toml
boot/: Cargo.toml
boot/.cargo/: config.toml
boot/src/: main.rs
boot/src/boot/: globals.rs  hooks.rs  mod.rs  pe.rs
boot/src/mapper/: headers.rs  mod.rs
bootkit/: .gitignore
bootkit/src/: main.rs
bootkit/src/boot/: globals.rs  hooks.rs  mod.rs  pe.rs
bootkit/src/mapper/: headers.rs  mod.rs
client/: Cargo.toml
client/src/: main.rs
client/src/communication/: mod.rs
driver/: Cargo.toml  Makefile.toml
driver/src/: includes.rs  lib.rs  restore.rs
driver/src/hooks/: mod.rs
driver/src/includes/: mod.rs
driver/src/mapper/: mod.rs
driver/src/pe/: mod.rs
driver/src/restore/: mod.rs
images/: Untitled Diagram.drawio
src/: main.rs
src/boot/: hooks.rs  includes.rs  mod.rs  pe.rs  utils.rs
testing123/: Cargo.toml  Makefile.toml
testing123/src/: lib.rs
