[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.17", default-features = false }
uefi = {version = "0.21.0", features = ["alloc"] }
uefi-services = "0.18.0"